test/compilable/test313f.d
// REQUIRED_ARGS: -de
// EXTRA_SOURCES: imports/f313.d
import foo.bar;

void test()
{
    foo.bar.bug();
}
