test/fail_compilation/fail4.d
typedef foo bar;
typedef bar foo;

// fail\fail4.d(2): typedef fail4.foo circular definition

